# v4l2-camera

./: .gitignore  CMakeLists.txt  QtCreatorDeployment.txt  README.md  camera-view.pro  camera_capture.cpp  camera_capture.h  camera_view.cpp  camera_view.h  image_converter.cpp  image_converter.h  main.cpp  main.qml  main_window.cpp  main_window.h  multicamerahandler.cpp  multicamerahandler.h  multicameraimageprovider.cpp  multicameraimageprovider.h  v4l2-camera.pro  v4l2_camera.cpp  v4l2_camera.h
